tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__operator_tests__path_01_craftinginterpreters_test_operator_add_lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/add.lox
---
success: true
exit_code: 0
----- stdout -----
579
string

----- stderr -----
