tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__operator_tests__path_08_craftinginterpreters_test_operator_comparison_lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/comparison.lox
---
success: true
exit_code: 0
----- stdout -----
true
false
false
true
true
false
false
false
true
false
true
true
false
false
false
false
true
true
true
true

----- stderr -----
