tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__operator_tests__path_21_craftinginterpreters_test_operator_less_or_equal_nonnum_num_lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/less_or_equal_nonnum_num.lox
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
InvalidBinaryOp { lhs: String("1"), op: BinOp { kind: LessEqual, token: Token { kind: LessEqual, loc: craftinginterpreters/test/operator/less_or_equal_nonnum_num.lox:4..6 } }, rhs: Number(1.0), at: Binary { lhs: Literal(Literal { kind: String("1"), token: Token { kind: String, loc: craftinginterpreters/test/operator/less_or_equal_nonnum_num.lox:0..3 } }), op: BinOp { kind: LessEqual, token: Token { kind: LessEqual, loc: craftinginterpreters/test/operator/less_or_equal_nonnum_num.lox:4..6 } }, rhs: Literal(Literal { kind: Number(1.0), token: Token { kind: Number, loc: craftinginterpreters/test/operator/less_or_equal_nonnum_num.lox:7..8 } }) } }
