tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__operator_tests__path_23_craftinginterpreters_test_operator_multiply_lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/multiply.lox
---
success: true
exit_code: 0
----- stdout -----
15
3.702

----- stderr -----
